--- a/index.html
+++ b/index.html
@@ -69,13 +69,29 @@
     </style>
 
     <script>
+      // The hands of the clock
       const secondHand = document.querySelector('.second-hand');
+      const minsHand = document.querySelector('.min-hand');
+      const hourHand = document.querySelector('.hour-hand');
+
       function setDate() {
         const now = new Date();
+
+        // Seconds Hand
         const seconds = now.getSeconds();
         // turns seconds into degrees
         const secondsDegrees = (seconds / 60) * 360 + 90;
         secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+
+        // mins Hand
+        const mins = now.getMinutes();
+        const minsDegrees = (mins / 60) * 360 + 90;
+        minsHand.style.transform = `rotate(${minsDegrees}deg)`;
+
+        // Hour Hand
+        const hour = now.getSeconds();
+        const hourDegrees = (mins / 12) * 360 + 90;
+        hourHand.style.transform = `rotate(${hourDegrees}deg)`;
       }
       setInterval(setDate, 1000);
     </script>
